@@ -11434,6 +11434,16 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
     <title>Release Notes</title>
 
     <section>
+      <title>Release 5.2-3</title>
+
+      <itemizedlist>
+        <listitem>
+          <para>Shark mode: Added support for TSCToolAgent</para>
+        </listitem>
+      </itemizedlist>
+    </section>
+
+    <section>
       <title>Release 5.2-2</title>
 
       <itemizedlist>
