@@ -38,6 +38,7 @@ WARNING_NON_EXISTING_VARIABLE_REFERENCE=Possibly non existing variable reference
 ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_IN_REQUIRED = Formal Parameter Mode must be IN or INOUT
 ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_OUT_REQUIRED = Formal Parameter Mode must be OUT or INOUT
 
+ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_EXTERNAL_LOCATION_TYPE_BYTE_ARRAY_REQUIRED = Invalid parameter type, External reference -> byte Array required
 ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED = Invalid parameter type, Basic type -> String required
 ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_ARRAY_REQUIRED = Invalid parameter type, Basic type -> String Array required
 ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_BOOLEAN_REQUIRED = Invalid parameter type, Basic type -> Boolean required
