@@ -30,6 +30,7 @@
 #Missing translation -> ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_IN_REQUIRED = Formal Parameter Mode must be IN or INOUT
 #Missing translation -> ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_OUT_REQUIRED = Formal Parameter Mode must be OUT or INOUT
 
+#Missing translation -> ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_EXTERNAL_LOCATION_TYPE_BYTE_ARRAY_REQUIRED = Invalid parameter type, External reference -> byte Array required
 #Missing translation -> ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED = Invalid parameter type, Basic type -> String required
 #Missing translation -> ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_ARRAY_REQUIRED = Invalid parameter type, Basic type -> String Array required
 #Missing translation -> ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_BOOLEAN_REQUIRED = Invalid parameter type, Basic type -> Boolean required
