@@ -31,6 +31,7 @@ WARNING_NON_EXISTING_VARIABLE_REFERENCE=Potencijalno nepostoje\u0107a referenca 
 ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_IN_REQUIRED = Mod formalnog parametra mora biti "U" ili "U i Iz"
 ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_OUT_REQUIRED = Mod formalnog parametra mora biti "Iz" ili "U i Iz"
 
+ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_EXTERNAL_LOCATION_TYPE_BYTE_ARRAY_REQUIRED = Neispravan tip parametra, treba biti Eksterni tip -> niz byte-ova
 ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED = Neispravan tip parametra, treba biti Osnovni tip -> String
 ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_ARRAY_REQUIRED = Neispravan tip parametra, treba biti Osnovni tip -> niz String-ova
 ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_BOOLEAN_REQUIRED = Neispravan tip parametra, treba biti Osnovni tip -> Boolean
