@@ -1,0 +1,48 @@
+<!--
+    Together Workflow Editor
+    Copyright (C) 2011 Together Teamsolutions Co., Ltd.
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or 
+    (at your option) any later version.
+ 
+    This program is distributed in the hope that it will be useful, 
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+    GNU General Public License for more details.
+ 
+    You should have received a copy of the GNU General Public License
+    along with this program. If not, see http://www.gnu.org/licenses
+-->
+<Application Id="tsc" Name="TSC">
+   <FormalParameters>
+      <FormalParameter Id="source" Name="Calculation data source" IsArray="true" Mode="IN">
+         <DataType>
+            <ExternalReference location="byte"/>
+         </DataType>
+         <Description>byte array representing CSV or XLSX file for the calculation data source.</Description>
+      </FormalParameter>
+      <FormalParameter Id="calculation_output_template_filepath" Name="File path to calculation output template" IsArray="false" Mode="IN">
+         <DataType>
+            <BasicType Type="STRING"/>
+         </DataType>
+         <Description>String representing a file path to calculation output template (CSV or XLSX file).</Description>
+      </FormalParameter>
+      <FormalParameter Id="calculation_filepath" Name="File path to calculation" IsArray="false" Mode="IN">
+         <DataType>
+            <BasicType Type="STRING"/>
+         </DataType>
+         <Description>String representing a file path to calculation file (HTML file generated by Spreadsheet convertor).</Description>
+      </FormalParameter>
+      <FormalParameter Id="result" Name="Calculation data result" IsArray="true" Mode="OUT">
+         <DataType>
+            <ExternalReference location="byte"/>
+         </DataType>
+         <Description>byte array representing CSV or XLSX file for the calculation data result.</Description>
+      </FormalParameter>
+   </FormalParameters>
+   <ExtendedAttributes>
+      <ExtendedAttribute Name="ToolAgentClass" Value="org.enhydra.shark.toolagent.TSCToolAgent"/>
+    </ExtendedAttributes>
+</Application>
