@@ -43,6 +43,8 @@ public final class SharkValidationErrorIds {
 
    public static final String ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_OUT_REQUIRED = "ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_OUT_REQUIRED";
 
+   public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_EXTERNAL_LOCATION_TYPE_BYTE_ARRAY_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_EXTERNAL_LOCATION_TYPE_BYTE_ARRAY_REQUIRED";
+   
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED";
 
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_ARRAY_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_ARRAY_REQUIRED";
